--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 04:34:00 PM</p>
+    <p class="lastupdate">09/08/2020 04:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">85.8&#176;F</td>
+        <td class="data">84.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">85.8&#176;F</td>
+        <td class="data">84.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">85.8&#176;F</td>
+        <td class="data">84.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.2&#176;F</td>
+        <td class="data">54.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">36%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.566 inHg (-0.015)</td>
+        <td class="data">29.565 inHg (-0.019)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph S (180&#176;)</td>
+        <td class="data">7 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="04:09:00 PM">
-            14</span><br/>
-          180
+          <span title="04:37:50 PM">
+            15</span><br/>
+          207
         </td>
         <td class="data new_row hilo_week">
           <span title="04:31:00 PM (Monday)">
@@ -439,12 +439,12 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          0<br/>
+          1<br/>
           185
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          353
+          352
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 1 hour, 47 minutes</td>
+      <td class="data">7 days, 1 hour, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 1 hour, 47 minutes</td>
+      <td class="data">7 days, 1 hour, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
