--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 06:34:00 PM</p>
+    <p class="lastupdate">09/08/2020 06:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">76.5&#176;F</td>
+        <td class="data">75.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">76.5&#176;F</td>
+        <td class="data">75.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">76.5&#176;F</td>
+        <td class="data">75.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.2&#176;F</td>
+        <td class="data">54.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">46%</td>
+        <td class="data">47%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.587 inHg (0.021)</td>
+        <td class="data">29.586 inHg (0.023)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph S (180&#176;)</td>
+        <td class="data">2 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">84.1&#176;F</td>
+        <td class="data">83.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">36%</td>
+        <td class="data">37%</td>
       </tr>
     </tbody>
   </table>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 3 hours, 47 minutes</td>
+      <td class="data">7 days, 3 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 3 hours, 47 minutes</td>
+      <td class="data">7 days, 3 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
